# token-reporter-plugin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cliff.toml  pyproject.toml
.claude-plugin/: plugin.json
.githooks/: pre-push
.github/workflows/: notify-marketplace.yml
.serena/: project.yml
hooks/: hooks.json
scripts/: bump_version.py  pre-push  publish.py  token-reporter.py
scripts/hooks/: pre-push
