[project]
name = "token-reporter"
version = "1.5.0"
description = "Per-operation token usage reporter for Claude Code"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Emasoft", email = "713559+Emasoft@users.noreply.github.com" },
]
dependencies = ["tiktoken"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
check_untyped_defs = false
